# eml-release

./: 0001-Added-EMLConfig-and-CMakeLists.txt.patch  0001-Apply-eml-r36.patch.patch  0001-added-files-for-lunar-compile.patch  0001-added-files-necessary-for-melodic-compile-packaging.patch  0001-added-files-necessary-for-noetic-compile-packaging.patch  0002-Add-skeleton-cmake-file.patch  0002-Updated-release-indigo-eml-with-a-copy-of-hydro-eml-.patch  0002-added-install-rule-for-package.xml.patch  0003-Fix-build-dependencies-and-add-CMake-config.patch  CMakeLists.txt  EMLConfig.cmake  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml  tracks.yaml~
debian/: changelog  control  gbp.conf  rules
indigo/: package.xml
melodic/: package.xml
noetic/: package.xml
rpm/: ros-indigo-eml.spec  ros-kinetic-eml.spec  ros-melodic-eml.spec  ros-noetic-eml.spec  template.spec
